--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 	<name>Hello World Web Application Repository</name>
-	<description>test Simplest Java Webapp</description>
+	<description> Simplest Java Webapp</description>
 
 	<build>
 		<plugins>
