--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>hello-world-war</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
-	<name>Hello World Web Application Repository</name>
+	<name>Hello World  Application Repository</name>
 	<description> Simplest Java Webapp</description>
 
 	<build>
