--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 	<name>Hello World  Application Repository</name>
-	<description> Simplest Java Webapp</description>
+	<description> Simplest Webapp</description>
 
 	<build>
 		<plugins>
